APB-10029 member name

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
@@ -14,8 +14,6 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseOfficer
-@import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseDateOfBirth
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -24,6 +22,8 @@
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionFormType
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms.toOfficerSelection
+@import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseOfficer
+@import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseDateOfBirth
 
 @this(
         layout: Layout,
