--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMemberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMemberPage.scala.html
@@ -14,8 +14,6 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseOfficer
-@import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseDateOfBirth
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -24,6 +22,8 @@
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionFormType
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms.toOfficerSelection
+@import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseDateOfBirth
+@import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseOfficer
 
 @this(
         layout: Layout,
@@ -33,6 +33,7 @@
         govukInsetText: GovukInsetText,
         continueOrSaveForLater: ContinueOrSaveForLater
 )
+
 
 @(
         form: Form[YesNo],
