--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/MatchedMemberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/MatchedMemberPage.scala.html
@@ -14,32 +14,32 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
+@import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.MemberProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
-@import uk.gov.hmrc.agentregistrationfrontend.forms.OfficerSelection
+@import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionFormType
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms.toOfficerSelection
-@import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseOfficer
 @import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseDateOfBirth
+@import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseOfficer
 
 @this(
         layout: Layout,
         govukRadios: GovukRadios,
         formWithCSRF: FormWithCSRF,
         govukButton: GovukButton,
-        govukInsetText: GovukInsetText,
-        continueOrSaveForLater: ContinueOrSaveForLater
+        govukInsetText: GovukInsetText
 )
 
-@(
-        form: Form[OfficerSelection],
-        officers: Seq[CompaniesHouseOfficer]
-)(implicit request: AgentApplicationRequest[?], messages: Messages)
 
-@key = @{ChOfficerSelectionForms.key}
+@(
+        form: Form[YesNo],
+        officer: CompaniesHouseOfficer
+)(implicit request: Request[?], messages: Messages)
+
+@key: String = @{ChOfficerSelectionForms.key}
+
 @makeDateOfBirth(dob: Option[CompaniesHouseDateOfBirth]) = {
   @if(dob.isDefined) {
      <div class="govuk-caption-m">
@@ -47,44 +47,49 @@
      </div>
   }
 }
-@makeLabel(officer: CompaniesHouseOfficer) = {
-      @{
-          officer.name
-      }
-      @{
-          makeDateOfBirth(officer.dateOfBirth)
-      }
-}
-@title = @{messages(s"$key.multiple.title", officers.size)}
+
+@title = @{messages(s"$key.single.title")}
 
 @layout(
     pageTitle = title,
     maybeForm = Some(form)
 ) {
-    <h2 class="govuk-caption-l">@messages("applicant-contact-details.title")</h2>
-    @formWithCSRF(action = AppRoutes.apply.applicantcontactdetails.CompaniesHouseMatchingController.submit) {
-        <input
-            type="hidden"
-            name="@ChOfficerSelectionFormType.key"
-            value="@ChOfficerSelectionFormType.OfficerSelectionForm"
-        />
+    <h2 class="govuk-caption-l">@messages("provide-details.llp.title")</h2>
 
-        @govukRadios(Radios(
+    <h1 class="govuk-heading-l">@title</h1>
+    @govukInsetText(InsetText(
+        content = HtmlContent(
+            s"${officer.name}${makeDateOfBirth(officer.dateOfBirth)}"
+        )
+    ))
+    @formWithCSRF(action = AppRoutes.providedetails.CompaniesHouseMatchingController.submit) {
+      <input
+          type="hidden"
+          name="@ChOfficerSelectionFormType.key"
+          value="@ChOfficerSelectionFormType.YesNoForm"
+      />
+      @govukRadios(Radios(
           fieldset = Some(Fieldset(
               legend = Some(Legend(
                   content = Text(title),
-                  isPageHeading = true,
-                  classes = "govuk-fieldset__legend--l"
+                  isPageHeading = false,
+                  classes = "govuk-visually-hidden"
               ))
           )),
-          hint = Some(Hint(content = HtmlContent(messages(s"$key.multiple.hint")))),
-          items = officers.map(officer =>
-              RadioItem(
-                  content = HtmlContent(makeLabel(officer)),
-                  value = Some(officer.toOfficerSelection.value)
-              )
-          )
-        ).withFormField(form(key)))
-        @continueOrSaveForLater()
+          hint = None,
+          items = YesNo.values.toSeq.map:
+            case YesNo.Yes => RadioItem(
+                content = HtmlContent(messages(s"$key.single.yes")),
+                value = Some(YesNo.Yes.toString)
+            )
+            case YesNo.No => RadioItem(
+                content = HtmlContent(messages(s"$key.single.no")),
+                value = Some(YesNo.No.toString)
+            )
+      ).withFormField(form(key)))
+
+      @govukButton(Button(
+          content = Text(messages("common.saveAndContinue"))
+      ))
     }
 }
