APB-10186 using address-lookup-frontend

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -45,9 +45,14 @@
         incompleteStatus
     }
 }
+@agentDetailsIsComplete = @{request.agentApplication.asLlpApplication.agentDetails.exists(_.isComplete)}
 @agentDetailsStatus = @{
     if(contactIsComplete) {
-        incompleteStatus
+      if(agentDetailsIsComplete) {
+          TaskListItemStatus(content = Text(messages(s"$key.status.Completed")))
+      } else {
+          incompleteStatus
+      }
     } else {
         TaskListItemStatus(content = Text(messages(s"$key.status.CannotStartYet")))
     }
