--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/CheckYourAnswersPage.scala.html
@@ -96,7 +96,26 @@
         ))
     )
 }
-@rows = @{Seq(businessNameRow, telephoneRow, emailRow)}
+@addressRow = @{
+    SummaryListRow(
+        key = Key(
+            content = Text(messages(s"$key.address.label"))
+        ),
+        value = Value(
+            content = HtmlContent(agentDetails.getAgentCorrespondenceAddress.toHtml)
+        ),
+        actions = Some(Actions(
+            items = Seq(
+                ActionItem(
+                    href = s"${AppRoutes.apply.agentdetails.AgentCorrespondenceAddressController.show}",
+                    content = Text(messages("common.change")),
+                    visuallyHiddenText = Some(messages(s"$key.address.label"))
+                )
+            )
+        ))
+    )
+}
+@rows = @{Seq(businessNameRow, telephoneRow, emailRow, addressRow)}
 
 @layout(pageTitle = title) {
     <h2 class="govuk-caption-l">@messages("agentDetails.title")</h2>
