APB-10388 APB-10387 Confirmation and view application

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -73,7 +73,7 @@
                     content = Text(messages(s"$key.businessDetails.linkText"))
                 ),
                 status = complete,
-                href = Some("#") // TODO we don't have a CYA view yet...
+                href = Some(AppRoutes.apply.aboutyourbusiness.CheckYourAnswersController.show.url)
             )
         ),
         idPrefix = "businessDetails"
