[APB-10321] working fast forward links
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/testOnly/views/FastForwardPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testOnly/views/FastForwardPage.scala.html
@@ -42,7 +42,7 @@
         These links require you to log in using the correct credentials.
     </p>
     <p class="govuk-body">
-      <a class="govuk-link" href="@{appConfig.signInUri(uri"${appConfig.thisFrontendBaseUrl + uk.gov.hmrc.agentregistrationfrontend.testOnly.controllers.routes.FastForwardController.showFastForwardPage().url}", AffinityGroup.Agent)}">Log In</a>
+      <a class="govuk-link" href="@{appConfig.signInUri(uri"${appConfig.thisFrontendBaseUrl + uk.gov.hmrc.agentregistrationfrontend.testOnly.controllers.routes.FastForwardController.show.url}", AffinityGroup.Agent)}">Log In</a>
     </p>
 
     <p class="govuk-body">
