[WG][APB-10034][APB-10035] Nino, Utr LLP, improvements

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberSaUtrPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberSaUtrPage.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import uk.gov.hmrc.agentregistration.shared.llp.MemberSaUtr
+@import uk.gov.hmrc.agentregistration.shared.llp.UserProvidedSaUtr
 @import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.MemberProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.MemberSaUtrForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
@@ -33,7 +34,7 @@
 )
 
 @(
-        form: Form[MemberSaUtr]
+        form: Form[UserProvidedSaUtr]
 )(implicit request: MemberProvideDetailsRequest[?], messages: Messages)
 
 @key = @{
