--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberNinoPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberNinoPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.llp.MemberNino
+@import uk.gov.hmrc.agentregistration.shared.llp.UserProvidedNino
 @import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.MemberProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.MemberNinoForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
@@ -33,7 +33,7 @@
 )
 
 @(
-        form: Form[MemberNino]
+        form: Form[UserProvidedNino]
 )(implicit request: MemberProvideDetailsRequest[?], messages: Messages)
 
 @key = @{
